# joke_share

./: .gitignore  pyproject.toml
joke_share/: __init__.py  db.py  schema.sql
joke_share/auth/: __init__.py  auth.py  helpers.py
joke_share/jokes/: __init__.py  jokes.py
joke_share/templates/: base.html
joke_share/templates/auth/: login.html  register.html
joke_share/templates/jokes/: jokes.html
tests/: conftest.py  data.sql  passowrds.csv  test_app_factory.py  test_db.py
tests/test_auth/: conftest.py  test_helpers.py  test_login.py  test_register.py
tests/test_jokes/: test_jokes.py
